# bombini

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot.yml  deploy_docs.yaml  release.yaml
.vim/: coc-settings.json
bombini/: Cargo.toml
bombini-common/: Cargo.toml
bombini-common/src/: config.rs  constants.rs  draft.rs  event.rs  k8s.rs  lib.rs
bombini-common/src/config/: filemon.rs  gtfobins.rs  io_uringmon.rs  kernelmon.rs  linpeasmon.rs  mod.rs  netmon.rs  network.rs  procmon.rs  rule.rs  simple.rs  sysenummon.rs
bombini-common/src/draft/: rule_interface.rs
bombini-common/src/event/: file.rs  gtfobins.rs  histfile.rs  io_uring.rs  kernel.rs  linpeas.rs  mod.rs  network.rs  process.rs  simple.rs  sysenum.rs
bombini-detectors-ebpf/: Cargo.toml  build.rs  generate_vmlinux.sh  rust-toolchain.toml
bombini-detectors-ebpf/src/: co_re.rs  dyn_ringbuf.rs  event_map.rs  filter.rs  interpreter.rs  lib.rs  uapi.rs  util.rs  vmlinux.rs
bombini-detectors-ebpf/src/co_re/: core_bpf.rs  core_cgroup.rs  core_cred.rs  core_exec.rs  core_fs.rs  core_io_uring.rs  core_kernfs.rs  core_mm_struct.rs  core_sock.rs  core_task_struct.rs
bombini-detectors-ebpf/src/co_re/c/: shim.c  types.h
bombini-detectors-ebpf/src/filter/: cred.rs  filemon.rs  ip.rs  kernelmon.rs  mod.rs  netmon.rs  path.rs  process.rs  procmon.rs  scope.rs
bombini-detectors-ebpf/src/filter/filemon/: chmod.rs  chown.rs  file_open.rs  fileopen.rs  ioctl.rs  mmap.rs  path.rs  path_filter.rs
bombini-detectors-ebpf/src/filter/kernelmon/: bpfmap.rs  bpfprog.rs
bombini-detectors-ebpf/src/filter/netmon/: ip.rs  ip_filter.rs  socket.rs
bombini-detectors-ebpf/src/filter/procmon/: bprm.rs  cred.rs  exec.rs
bombini-detectors-ebpf/src/interpreter/: mod.rs  rule.rs  stack.rs
bombini/src/: config.rs  detector.rs  k8s.rs  k8s_info.rs  lib.rs  main.rs  metrics.rs  monitor.rs  options.rs  registry.rs  rule.rs  transmuter.rs
bombini/src/detector/: filemon.rs  filemon_new.rs  gtfobins.rs  histfile.rs  io_uring.rs  io_uringmon.rs  kernelmon.rs  linpeasmon.rs  mod.rs  netmon.rs  netmon_new.rs  procmon.rs  simple.rs  sysenummon.rs
bombini/src/loader/: gtfobins.rs  mod.rs  simple.rs
bombini/src/monitor/: bpf_errors.rs
bombini/src/proto/: config.rs
bombini/src/rule/: ast.rs  macros.rs  predicate.lalrpop  predicate.rs  predicate_parser.rs  serializer.rs
bombini/src/rule/serializer/: attribute.rs  dummy.rs  filemon.rs  kernelmon.rs  netmon.rs  predicate.rs  procmon.rs  scope.rs
bombini/src/rule/serializer/attribute/: defs.rs  util.rs
bombini/src/transmitter/: file.rs  log.rs  mod.rs  stdout.rs  unix_sock.rs
bombini/src/transmuter/: file.rs  gtfobins.rs  histfile.rs  io_uring.rs  kernel.rs  linpeas.rs  mod.rs  network.rs  process.rs  simple.rs  sysenum.rs
bombini/src/transmuter/cache/: process.rs
bombini/src/transmuter/linpeas/: mod.rs
bombini/tests/: README.md  common.rs  filemon.rs  kernelmon.rs  netmon.rs  procmon.rs  sandbox.rs  tests.rs
bombini/tests/common/: bombini_launcher.rs  bpftrace_launcher.rs  mod.rs
bombini/tests/testdata/config/: config.yaml  filemon.yaml  gtfobins.yaml  kernelmon.yaml  linpeasmon.yaml  netmon.yaml  procmon.yaml  sysenummon.yaml
config/: config.yaml  filemon.yaml  filemon_new.yaml  gtfobins.yaml  io_uringmon.yaml  linpeas.yaml  linpeasmon.yaml  netmon.yaml  netmon_new.yaml  procmon.yaml  simple.yaml  sysenummon.yaml
docs/: README.md  book.toml  design.md
docs/detectors/: filemon.md  gtfobins.md  histfile.md  io_uring.md  io_uringmon.md  netmon.md  procmon.md
docs/src/: SUMMARY.md  compatibility.md  design.md  introduction.md  metrics.md
docs/src/configuration/: README.md  configuration.md  filemon.md  filtering.md  gtfobins.md  io_uringmon.md  kernelmon.md  netmon.md  procmon.md  reference.md  rules.md  sysenummon.md
docs/src/events/: events.md  filemon.md  gtfobins.md  io_uringmon.md  kernelmon.md  netmon.md  procmon.md  reference.md  sysenummon.md
docs/src/getting_started/: build.md  container.md  getting_started.md  k8s.md  tarball.md
examples/: filemon-macros.yaml  filemon-proc-allow-list.yaml  filemon-rules.yaml  linpeas-detector.yaml  netmon-egress-outside-local.yaml  procmon-allow-list.yaml  procmon-deny-list.yaml  procmon-gtfobins.yaml  procmon-privilegde-raise.yaml
install/k8s/: Dockerfile  bombini.yaml  kind-config.yaml
install/tarball/: install.sh  uninstall.sh
install/tarball/systemd/: bombini.service
proto/: config.proto
vector/: vector-file.yaml  vector-sock.yaml
xtask/: Cargo.toml
xtask/src/: build.rs  build_ebpf.rs  docs_gen.rs  main.rs  proto_gen.rs  rule_parser_gen.rs  run.rs  tarball.rs  test.rs  util.rs  vmlinux_gen.rs
