[package]
name = "bombini-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya", "serde"]

[dependencies]
aya = { version = "0.13.1", optional = true }
bitflags = { version = "2.9.2"}
serde = { version = "1.0.219", features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"
