[package]
name = "bombini-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
user = ["aya", "serde", "procfs"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya.git", package ="aya", optional = true, rev = "519abffef7064ae8a79502e49b8187a363af3ad5" }
bitflags = { version = "2.10.0"}
serde = { version = "1.0.228", features = ["derive"], optional = true }
procfs = { version = "0.18.0", optional = true }

[lib]
path = "src/lib.rs"
