[package]
name = "bombini-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
user = ["aya", "serde", "procfs"]

[dependencies]
aya = { version = "0.13.1", optional = true }
bitflags = { version = "2.11.0"}
serde = { version = "1.0.228", features = ["derive"], optional = true }
procfs = { version = "0.18.0", optional = true }

[lib]
path = "src/lib.rs"
