[package]
name = "bombini-detectors-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya.git", package ="aya-ebpf", rev = "519abffef7064ae8a79502e49b8187a363af3ad5" }
bombini-common = { path = "../bombini-common" }
bitflags = "2.10.0"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
