[package]
name = "bombini-detectors-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = "0.1.1"
bombini-common = { path = "../bombini-common" }
bitflags = "2.11.0"
paste = "1"

[build-dependencies]
bindgen = { version = "0.71", default-features = false, features = ["runtime"] }


[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = false
panic = "abort"
codegen-units = 1

[workspace]
members = []
