[package]
name = "bombini"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aya = "0.13.1"
bombini-common = { path = "../bombini-common", features = ["user"] }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1"
bitflags = { version = "2.10.0", features = ["serde"]}
bytes = "1.11.0"
env_logger = "0.11.8"
libc = "0.2.178"
log = "0.4.28"
procfs = "0.18.0"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
async-trait = "0.1.89"
futures-executor = "0.3.31"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
scopeguard = "1.2.0"
nix = { version = "0.30.1", features = ["time"] }
chrono = { version = "0.4.42", features = ["alloc"] }
schemars = {version = "1.1.0", optional = true }

[dev-dependencies]
nix = { version = "0.30.1", features = ["signal"] }
tempfile = "3"
more-asserts = "0.3"
libc = "0.2.178"
sha256 = "1.6.0"

[features]
# Only for test to generate example events
examples = []
# Only for test to generate json event schema
schema = ["schemars"]

[[bin]]
name = "bombini"
path = "src/main.rs"
