[package]
name = "bombini"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aya = "0.13.1"
bombini-common = { path = "../bombini-common", features = ["user"] }
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1"
bitflags = { version = "2.11.0", features = ["serde"]}
bytes = "1.11.1"
env_logger = "0.11.8"
libc = "0.2.180"
log = "0.4.29"
procfs = "0.18.0"
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
futures-executor = "0.3.32"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
scopeguard = "1.2.0"
nix = { version = "0.31.1", features = ["time"] }
chrono = { version = "0.4.43", features = ["alloc"] }
schemars = {version = "1.2.1", optional = true }
lalrpop-util = {version = "0.22.2", features = ["lexer", "unicode"] }

[dev-dependencies]
nix = { version = "0.31.1", features = ["signal"] }
tempfile = "3"
more-asserts = "0.3"
libc = "0.2.180"
sha256 = "1.6.0"

[features]
# Only for test to generate example events
examples = []
# Only for test to generate json event schema
schema = ["schemars"]

[[bin]]
name = "bombini"
path = "src/main.rs"
